# mcos-cmore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
apps/local_api_preview/: README.md
docs/: BOOTSTRAP_FEED_REGISTRY.md  BRANCH_UPLOAD_STATUS_v0_1_R.md  FEEDING_PIPELINE.md  FOUNDATION_LAYER_INGESTION.md  FOUNDATION_LAYER_MINIMUM_REVIEW.md  FUTURE_ADAPTER_BOUNDARY.md  GRAPH_INDEX_v0_2.md  HUMAN_REVIEW_GOVERNANCE.md  INSTALLATION.md  MCOS_BOOTSTRAP_BUILD_SPEC.md  PRIVATE_MODEL_WORKFLOW.md  PUBLICATION_GATE.md  ROADMAP.md  TRANSFER_INTEGRATION_v0_1_R.md  TRANSFER_PROMOTION_PLAN_v0_1_R.md  ZERO_DISTILLATION_PROTOCOL.md
docs/review/: POST_MERGE_MAIN_HARDENING_v0_1_R.md  POST_MERGE_REVIEW_MAIN_v0_1_R.md  POST_MERGE_REVIEW_PR9_HOTFIX_v0_1A.md  PR_1_BATCH_6_SUPERCLUSTER_GAP_REVIEW.md
examples/: feed_batch.jsonl  feed_source_package.json  foundation_layer_seed.json  group_object.json  group_relation.json  private_model_synthetic_input.private.json
mcos/: __init__.py  cli.py  core.py  distill.py  feed_registry.py  index.py  ingest.py
registry/: bootstrap_feed_registry.json  foundation_layer_registry.json  minimum_capability_matrix.json  pr_1_batch_6_gap_classification.json  transfer_integration_decision_v0_1_R.json
scripts/: run_all_checks.sh
tests/: test_core.py  test_distill.py  test_foundation_seed.py  test_index.py  test_ingest.py
(+1 files in other folders)
